--- a/Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization/TensorFlow.ipynb
+++ b/Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization/TensorFlow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,24 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<tf.Variable 'Variable:0' shape=() dtype=float32, numpy=0.0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "w = tf.Variable(0, dtype=tf.float32)\n",
     "optimizer = tf.keras.optimizers.Adam(0.1)\n",
@@ -47,17 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<tf.Variable 'Variable:0' shape=() dtype=float32, numpy=0.09999931>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_step()\n",
     "print(w)"
@@ -65,17 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<tf.Variable 'Variable:0' shape=() dtype=float32, numpy=5.000001>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(1000):\n",
     "    train_step()\n",
@@ -87,7 +56,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "w = tf.Variable(0, dtype=tf.float32)\n",
+    "x = np.array([1.0,-10.0,25.0], dtype=np.float32)\n",
+    "optimizer = tf.keras.optimizers.Adam(0.1)\n",
+    "\n",
+    "def training(x,w,optimizer):\n",
+    "    def cost_fn():\n",
+    "        return x[0]*w **2 +x[1] *w +x[2]\n",
+    "    for i in range(1000):\n",
+    "        optimizer.minimize(cost_fn,[w])\n",
+    "\n",
+    "    return w\n",
+    "\n",
+    "w = training(x,w,optimizer)\n",
+    "print(w)"
+   ]
   }
  ],
  "metadata": {
