--- a/kaggle/Predict Health Outcomes of Horses/EDA.ipynb
+++ b/kaggle/Predict Health Outcomes of Horses/EDA.ipynb
@@ -106,6 +106,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 각 열의 고유한 값 확인\n",
+    "for column in train_df.columns:\n",
+    "    unique_values = train_df[column].unique()\n",
+    "    print(f\"열 '{column}'의 고유한 값: {unique_values}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#aggfunc = count일 경우에는 범주형 데이터의 수를 세줌\n",
     "pd.pivot_table(train_df, index = 'hospital_number', columns = 'outcome', values = 'age', aggfunc = 'count')"
    ]
